developer details sorted

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,7 @@
     Added new visualizations!! Check it out
   </div>
 </div>
+
 <!-- JUMBOTRON -->
 <div class="container mt-0">
   <div class="jumbotron">
@@ -47,8 +48,9 @@
 
 <div class="container mt-5">
   <div class="row justify-content-center">
-    <div class="col-md-8 col-10">
+    <div class="col-md-8 col-10 px-0">
       <div class="flourish-embed flourish-chart" data-src="story/230085"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+    </div>
   </div>
 </div>
 
