world map added and pie removed

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -46,13 +46,6 @@
   </div>
 </div>
 
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-8 col-10 px-0">
-      <div class="flourish-embed flourish-chart" data-src="story/230085"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-    </div>
-  </div>
-</div>
 
 <!-- Search Bar And Table -->
 <div class="container">
@@ -99,6 +92,14 @@
         </tbody>
     </table>
     <div class="mb-5 pl-md-3 pl-2 text-dark lastRefreshed">All data are taken from reliable sources</div>
+    </div>
+  </div>
+</div>
+
+<div class="container mb-5">
+  <div class="row justify-content-center">
+    <div class="col-md-10 col-11 px-0">
+      <div class="flourish-embed flourish-map" data-src="story/225979"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
     </div>
   </div>
 </div>
