--- a/views/city.ejs
+++ b/views/city.ejs
@@ -4,7 +4,11 @@
 <div id="header" class="container">
   <div class="jumbotron">
     <div class="text-center text-white" id="jumboContent">
-      <h1 class="display-4" id="jumboHeading">COVID19-<span class="name"><%= state %></span></h1>
+      <% var stateLoc = state %>
+      <% if(stateLoc == "Dadra and Nagar Haveli and Daman and Diu"){ %>
+        <% stateLoc = "Daman and Diu" %> 
+      <% } %>
+      <h1 class="display-4" id="jumboHeading">COVID19-<span class="name"><%= stateLoc %></span></h1>
       <p class="lead" id="jumboLead">We keep you updated!!</p>
     </div>
   </div>
@@ -31,9 +35,7 @@
           <td class="pl-md-3 pl-1 heading text-white-50">Deceased</td>
       </thead>
       <tbody>
-        <% if(state === "Dadar Nagar Haveli"){ %>
-            <% state = "Dadra and Nagar Haveli and Daman and Diu" %>
-        <% } %>
+
           <% for (var city in data[state]["districtData"]) { %>
             <% if(data[state]["districtData"].hasOwnProperty(city)){ %>
               <tr>
