removed flash message

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,14 +1,8 @@
 <%- include ("partials/header") %>
 
 
-<div class="container mt-0 fadeOut">
-  <div class="alert alert-info message" role="alert">
-    Added new visualizations!! Check it out
-  </div>
-</div>
-
 <!-- JUMBOTRON -->
-<div class="container mt-0">
+<div class="container" id="header">
   <div class="jumbotron">
     <div class="text-center text-white" id="jumboContent">
       <h1 class="display-4" id="jumboHeading">COVID19-<span class="name">INDIA</span></h1>
