--- a/views/city.ejs
+++ b/views/city.ejs
@@ -1,5 +1,8 @@
 <%- include ("partials/header") %>
 
+<% function numberWithCommas(x) { %>
+  <% return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ","); %>
+<% } %>
 <!-- Jumbotron -->
 <div id="header" class="container">
   <div class="jumbotron">
@@ -22,6 +25,13 @@
         <input class="form-control" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for city" title="Type in a name">
       </div>
     </div>
+    <button id="sort" class="btn btn-outline-light btn-sm ml-md-3 ml-1 mb-2">Sort
+      <svg class="bi bi-arrow-down-up" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" d="M11 3.5a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5z"/>
+        <path fill-rule="evenodd" d="M10.646 2.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L11 3.707 8.354 6.354a.5.5 0 1 1-.708-.708l3-3zm-9 7a.5.5 0 0 1 .708 0L5 12.293l2.646-2.647a.5.5 0 1 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 0 1 0-.708z"/>
+        <path fill-rule="evenodd" d="M5 2.5a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-1 0V3a.5.5 0 0 1 .5-.5z"/>
+      </svg>
+    </button>
     <table id="myTable" class="mb-5 start">
       <thead>
           <td class="pl-md-3 pl-1 heading text-white-50">City</td>
@@ -41,13 +51,13 @@
               <tr>
                   <td class="pl-md-3 pl-1"><%= city %></td>
                   <td> </td>
-                  <td class="pl-md-3 pl-2 text-danger"><%= data[state]["districtData"][city].confirmed %></td>
+                  <td class="pl-md-3 pl-2 text-danger"><%= numberWithCommas(data[state]["districtData"][city].confirmed) %></td>
                   <td> </td>
-                  <td class="pl-md-3 pl-2 text-info"><%= data[state]["districtData"][city].active %></td>
+                  <td class="pl-md-3 pl-2 text-info"><%= numberWithCommas(data[state]["districtData"][city].active) %></td>
                   <td> </td>
-                  <td class="pl-md-3 pl-2 text-success"><%= data[state]["districtData"][city].recovered %></td>
+                  <td class="pl-md-3 pl-2 text-success"><%= numberWithCommas(data[state]["districtData"][city].recovered) %></td>
                   <td> </td>
-                  <td class="pl-md-3 pl-2 text-muted"><%= data[state]["districtData"][city].deceased %></td>
+                  <td class="pl-md-3 pl-2 text-muted"><%= numberWithCommas(data[state]["districtData"][city].deceased) %></td>
               </tr>
           <% } } %>
       </tbody>
@@ -86,6 +96,50 @@
       }       
     }
   }
+
+  var button = document.querySelector('button');
+    button.addEventListener('click', function(){
+var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0,n=2;
+
+table = document.getElementById('myTable');
+switching = true;
+dir = "asc";
+while (switching) {
+    switching = false;
+    rows = table.getElementsByTagName("tr");
+    for (i = 1; i < (rows.length - 1); i++) {
+        shouldSwitch = false;
+        x = rows[i].getElementsByTagName("td")[n];
+        x=x.innerHTML.replace(/\,/g,'');
+        x=parseInt(x,10);
+        y = rows[i + 1].getElementsByTagName("td")[n];
+        y=y.innerHTML.replace(/\,/g,'');
+        y=parseInt(y,10);
+        if (dir == "asc") {
+            if (x > y) {
+                shouldSwitch= true;
+                break;
+            }
+        } else if (dir == "desc") {
+            if (x < y) {
+                shouldSwitch= true;
+                break;
+            }
+        }
+    }
+    if (shouldSwitch) {
+        rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+        switching = true;
+        switchcount ++;      
+    } else {
+        if (switchcount == 0 && dir == "asc") {
+            dir = "desc";
+            switching = true;
+        }
+    }
+}
+
+    })
 </script>
 
 
