change api of stateData

--- a/views/country.ejs
+++ b/views/country.ejs
@@ -46,7 +46,7 @@
                 <tbody>
                     <% data["response"].forEach(function(con){ %>
                         <% if(con.country === "Italy" ||  con.country=== "Brazil" ||
-                        con.country=== "Germany" || con.country=== "Russia" || con.country=== "USA" || con.country=== "France" || con.country=== "Iran" || con.country=== "Peru" || con.country=== "Turkey" || con.country=== "Chile" || con.country=== "Mexico" || con.country=== "Pakistan" || con.country=== "Canada"){ %>
+                        con.country=== "Germany" || con.country=== "Russia" || con.country=== "USA" || con.country=== "France" || con.country=== "Iran" || con.country=== "Peru" || con.country=== "Turkey" || con.country=== "Chile" || con.country=== "Mexico" || con.country=== "Pakistan" || con.country=== "Canada" || con.country=== "India"){ %>
                         <tr>
                             <td class="pl-md-3 pl-1"><%= con.country %></td>
                             <td> </td>
